--- a/Mamans/11/makefile
+++ b/Mamans/11/makefile
@@ -2,4 +2,4 @@
 submit: 
 	make -C doll/ clean
 	make -C my_cos/ clean
-	zip -r maman11.zip
+	zip -r maman11.zip doll/ my_cos/* main my_cos.c my_cos.h Screenshot from Run_Screenshot.png
